# devcli

./: .gitignore  .npmrc  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
docs/: ARCHITECTURE.md  DESIGN.md  PRD.md  PROMPT-STORAGE.md  ROADMAP.md
scripts/: gen-icon.js
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  main.rs  session.rs  vault.rs
src/styles/: theme.css
