# DevCLI — Rust core (Tauri v2). Real PTY + shell + Claude Code prompt vault.
[package]
name = "devcli"
version = "0.2.2"
edition = "2021"
description = "Local-first terminal for Claude Code vibe coders"

[[bin]]
name = "devcli"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# terminal: real PTY hosting a real shell
portable-pty = "0.8"

# session: tail ~/.claude/projects/**/*.jsonl
notify = "6"
walkdir = "2"
dirs = "5"

# vault: prompt index + content-hash dedup (git handled via the `git` CLI)
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"

# auto-update from GitHub Releases
tauri-plugin-updater = "2"
tauri-plugin-process = "2"

# --- later ---
# alacritty_terminal = "0.24"   # native VTE (perf swap for xterm.js)

[features]
default = []
sync = []   # optional networked sync — off by default (privacy)
